--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,11 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.4.1",
+    "mdbreact": "^4.26.0",
+    "parallax": "0.0.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
