--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "fix": "eslint --fix .",
+    "lint": "eslint --quiet ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "eslint": "^6.8.0",
+    "lint": "^0.7.0",
+    "nodemon": "^1.18.7",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "axios": "^0.18.0",
