--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,10 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "mdbreact": "^4.26.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "parallax": "0.0.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.1",
@@ -24,12 +24,21 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix": "eslint --fix .",
+    "lint": "eslint --quiet ."
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7",
+    "eslint": "^6.8.0",
+    "lint": "^0.7.0",
+    "prettier": "^2.0.2"
+  }
 }
