--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7",
     "eslint": "^6.8.0",
     "lint": "^0.7.0",
-    "nodemon": "^1.18.7",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^7.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.12"
+    "lint": "^0.7.0",
+    "mongoose": "^5.9.12",
+    "prettier": "^2.0.5"
   }
 }
