--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-console":"off",
     "no-duplicate-case": "error",
     "no-empty": "error",
     "no-extra-semi": "error",
@@ -34,5 +35,9 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
-  }
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+]
 }
