--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7",
-    "eslint": "^6.8.0",
+    "concurrently": "^4.1.2",
+    "eslint": "5.12.0",
     "lint": "^0.7.0",
+    "nodemon": "^1.19.4",
     "prettier": "^2.0.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "eslint": "^7.0.0",
+    "eslint": "5.12.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
