--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.6.3",
     "react-form-stepper": "^1.2.3",
+    "react-grid-gallery": "^0.5.5",
     "react-parallax": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1",
