--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
     "camelcase": "error",
     "brace-style": "error",
     "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": ["off", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
   },
