--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
     "concurrently": "^4.1.2",
+    "connect-flash": "^0.1.1",
     "eslint": "5.12.0",
-    "lint": "^0.7.0",
-    "nodemon": "^1.19.4",
-    "prettier": "^2.0.2",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "lint": "^0.7.0",
+    "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
+    "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "prettier": "^2.0.2"
   }
 }
