--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
-    "mongoose": "^5.9.12",
+    "moment": "^2.25.3",
+    "mongoose": "^5.9.14",
+    "mongoose-moment": "^0.1.3",
     "prettier": "^2.0.5"
   }
 }
