Revert "Merge branch 'master' into maydelrego"
This reverts commit 86cb41bd19ffcd61c23f678b58fd8210bb20442a, reversing
changes made to ec8053e934c93e5c39fb4ff663508a22c978626c.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
     "camelcase": "error",
     "brace-style": "error",
     "indent": ["error", 2],
-    "linebreak-style": ["off", "unix"],
+    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
   },
