--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "seed": "node ./scripts/seedDB.js",
+    "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
@@ -18,30 +18,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
+    "eslint": "5.12.0",
     "lint": "^0.7.0",
-    "nodemon": "^1.18.7",
-    "prettier": "^2.0.5",
-    "eslint": "5.12.0"
+    "nodemon": "^1.19.4",
+    "prettier": "^2.0.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bcrypt": "^4.0.1",
-    "bcrypt-nodejs": "0.0.3",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "concurrently": "^4.1.2",
-    "connect-flash": "^0.1.1",
     "eslint": "5.12.0",
     "express": "^4.16.3",
-    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
-    "mongoose": "^5.9.14",
-    "morgan": "^1.10.0",
-    "nodemon": "^1.19.4",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "prettier": "^2.0.2"
+    "mongoose": "^5.9.12",
+    "prettier": "^2.0.5"
   }
 }
