--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "mdbreact": "^4.26.0",
