--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "recharts": "^1.8.5"
   }
 }
