--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.14",
     "mongoose-moment": "^0.1.3",
+    "passport": "^0.4.1",
     "prettier": "^2.0.5"
   }
 }
