chart on admin dashboard

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "prettier": "^2.0.2",
+    "react-resize-detector": "^4.2.3",
+    "react-smooth": "^1.0.5",
     "recharts": "^1.8.5"
   }
 }
