--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "mdbreact": "^4.26.0",
     "node-sass": "^4.14.1",
     "parallax": "0.0.0",
