--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^4.0.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
