--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "5.12.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
     "mongoose": "^5.9.12",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "prettier": "^2.0.5"
   }
 }
