--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^4.0.1",
     "eslint": "5.12.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
     "mongoose": "^5.9.14",
@@ -36,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "prettier": "^2.0.2",
+    "react-chartjs-2": "^2.9.0",
     "react-resize-detector": "^4.2.3",
     "react-smooth": "^1.0.5",
     "recharts": "^1.8.5"
