--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
+    "moment": "^2.25.3",
+    "mongoose": "^5.9.14",
+    "mongoose-moment": "^0.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "react-chartjs-2": "^2.9.0",
     "react-resize-detector": "^4.2.3",
     "react-smooth": "^1.0.5",
-    "recharts": "^1.8.5",
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.14",
-    "mongoose-moment": "^0.1.3"
+    "recharts": "^1.8.5"
   }
 }
