--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "if-env": "^1.0.4",
     "lint": "^0.7.0",
     "moment": "^2.25.3",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.14",
     "mongoose-moment": "^0.1.3",
     "morgan": "^1.10.0",
