--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^4.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "5.12.0",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
