--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
+PORT=3001
 MONGO_URI=mongodb+srv://maydelrego:oddun077@cluster-p5nwjvdj.ez3xl.mongodb.net/campbellDB
+NODE_ENV=development
